--- a/Balu/Views/Catalog/Index.cshtml
+++ b/Balu/Views/Catalog/Index.cshtml
@@ -7,7 +7,7 @@
     {
         <div>
             <div class="card" style="width: 20rem;">
-                <a asp-controller="Product" asp-route-id="@product.Id">
+                <a asp-controller="MoreInfoProduct" asp-action="Index" asp-route-id="@product.Id">
                     <div class="card-img" style="background-image: url('@product.Img');"></div>
                 </a>
                 <div class="card-body">
