--- a/Balu/Views/Shared/_Layout.cshtml
+++ b/Balu/Views/Shared/_Layout.cshtml
@@ -19,38 +19,89 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        @*<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <div class="container">
+        <a class="navbar-brand" asp-controller="Home" asp-action="Index"><img src="ico/bear.ico" alt="Balu" /></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+        aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse">
+        <ul class="navbar-nav text-center">
+        <li class="nav-item mr-3 ml-3">
+        <a class="nav-link text-dark" asp-controller="" asp-action="">О нас</a>
+        </li>
+        <li class="nav-item mr-3 ml-3">
+        <a class="nav-link text-dark" asp-controller="Catalog" asp-action="Index">Каталог</a>
+        </li>
+        <li class="nav-item mr-3 ml-3">
+        <a class="nav-link text-dark" asp-controller="Contact" asp-action="Index">Контакты</a>
+        </li>
+        </ul>
+
+        </div>
+
+        <form class="form-inline my-2 my-lg-0">
+        <a class="nav-link text-dark" asp-controller="Basket" asp-action="Index"><i class="bi bi-bag" style="font-size: 20px;"></i></a>
+        </form>
+        </div>
+        </nav>*@
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <!-- Container wrapper -->
             <div class="container">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                <!-- Navbar brand -->
+                <a class="navbar-brand me-2" asp-controller="Home" asp-action="Index">
+                    <img src="ico/bear.ico" alt="Balu"
+                         loading="lazy"
+                         style="margin-top: -1px;" />
+                </a>
+
+                <!-- Toggle button -->
+                <button class="navbar-toggler"
+                        type="button"
+                        data-mdb-toggle="collapse"
+                        data-mdb-target="#navbarButtonsExample"
+                        aria-controls="navbarButtonsExample"
+                        aria-expanded="false"
+                        aria-label="Toggle navigation">
+                    <i class="fas fa-bars"></i>
                 </button>
-                <div class="collapse navbar-collapse justify-content-center">
-                    <ul class="navbar-nav">
-                        <li class="nav-item mr-3 ml-3">
-                            <a class="nav-link text-dark" asp-controller="" asp-action="">О нас</a>
+
+                <!-- Collapsible wrapper -->
+                <div class="collapse navbar-collapse" id="navbarButtonsExample">
+                    <!-- Left links -->
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item  mr-3 ml-3">
+                            <a class="nav-link" asp-controller="" asp-action="">О нас</a>
                         </li>
                         <li class="nav-item mr-3 ml-3">
-                            <a class="nav-link text-dark" asp-controller="" asp-action="">Новинки</a>
+                            <a class="nav-link" asp-controller="Catalog" asp-action="Index">Каталог</a>
                         </li>
                         <li class="nav-item mr-3 ml-3">
-                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Index"><img src="ico/bear.ico" alt="Balu" /></a>
-                        </li>
-                        <li class="nav-item mr-3 ml-3">
-                            <a class="nav-link text-dark" asp-controller="Catalog" asp-action="Index">Каталог</a>
-                        </li>
-                        <li class="nav-item mr-3 ml-3">
-                            <a class="nav-link text-dark" asp-controller="Contact" asp-action="Index">Контакты</a>
+                            <a class="nav-link" asp-controller="Contact" asp-action="Index">Контакты</a>
                         </li>
                     </ul>
+                    <!-- Left links -->
+
+                    <div class="d-flex align-items-center">
+                        <form class="form-inline my-2 my-lg-0">
+                            <a class="nav-link text-dark" asp-controller="Basket" asp-action="Index"><i class="bi bi-bag" style="font-size: 20px;"></i></a>
+                        </form>
+                        @*<a class="btn btn-dark px-3"
+                           href="https://github.com/mdbootstrap/mdb-ui-kit"
+                           role="button">
+                            <i class="fab fa-github"></i>
+                        </a>*@
+                    </div>
                 </div>
-                <form class="form-inline my-2 my-lg-0">
-                    <a class="nav-link text-dark" asp-controller="Basket" asp-action="Index"><i class="bi bi-bag" style="font-size: 20px;"></i></a>
-                </form>
+                <!-- Collapsible wrapper -->
             </div>
+            <!-- Container wrapper -->
         </nav>
+        <!-- Navbar -->
     </header>
-    <div class="container">
+    <div class="container" style="padding-top: 70px;">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
